git-annex (0.21) UNRELEASED; urgency=low

  * test: Don't rely on chmod -R working.
  * unannex: Fix recently introduced bug when attempting to unannex more
    than one file at a time.
  * test: Set git user name and email in case git can't guess values.

 -- Joey Hess <joeyh@debian.org>  Wed, 09 Feb 2011 00:12:11 -0400

git-annex (0.20) unstable; urgency=low

  * Preserve specified file ordering when instructed to act on multiple
    files or directories. For example, "git annex get a b" will now always
    get "a" before "b". Previously it could operate in either order.
  * unannex: Commit staged changes at end, to avoid some confusing behavior
    with the pre-commit hook, which would see some types of commits after
    an unannex as checking in of an unlocked file.
  * map: New subcommand that uses graphviz to display a nice map of
    the git repository network.
  * Deal with the mtl/monads-fd conflict.
  * configure: Check for sha1sum.

 -- Joey Hess <joeyh@debian.org>  Tue, 08 Feb 2011 18:57:24 -0400

git-annex (0.19) unstable; urgency=low

  * configure: Support using the uuidgen command if the uuid command is
    not available.
  * Allow --exclude to be specified more than once.
  * There are now three levels of repository trust.
  * untrust: Now marks the current repository as untrusted.
  * semitrust: Now restores the default trust level. (What untrust used to do.)
  * fsck, drop: Take untrusted repositories into account.
  * Bugfix: Files were copied from trusted remotes first even if their
    annex.cost was higher than other remotes.
  * Improved temp file handling. Transfers of content can now be resumed
    from temp files later; the resume does not have to be the immediate
    next git-annex run.
  * unused: Include partially transferred content in the list.
  * Bugfix: Running a second git-annex while a first has a transfer in
    progress no longer deletes the first processes's temp file.
